Causeview Package Complete/ant script/retrieveUnpackaged/objects/BatchSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Causeview batch processing settings.</description>
    <fields>
        <fullName>BatchFormID__c</fullName>
        <description>Customer Batch Actionform Id.  Used by internal payment processing features.</description>
        <inlineHelpText>Customer Batch Actionform Id.  Used by internal payment processing features.</inlineHelpText>
        <label>Batch Form Id</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchReportId__c</fullName>
        <label>Batch Report ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BucketAccountId__c</fullName>
        <label>Bucket Account ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyCode__c</fullName>
        <label>Currency Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Migration_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox determines how the system behaves, much like a DEBUG mode.</description>
        <inlineHelpText>For CauseView use only. DO NOT CHECK OR MODIFY.</inlineHelpText>
        <label>Data Migration Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GatewayUrl__c</fullName>
        <defaultValue>&quot;https://api.causeview.com/v2.1/Gateway.asmx&quot;</defaultValue>
        <description>URL used to connect to customer payment gateway via Causeview Actionengine.</description>
        <inlineHelpText>URL used to connect to customer payment gateway via Causeview Actionengine.</inlineHelpText>
        <label>Payment Gateway URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LockBucketAccount__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this box is checked, the Account with ID in BucketAccountId__c will be read-only, and undeletable.</description>
        <inlineHelpText>If this box is checked, the Account with ID in BucketAccountId__c will be read-only, and undeletable.</inlineHelpText>
        <label>Lock Bucket Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Id_for_Rollups__c</fullName>
        <description>Matching gift record type Id to be included in Gift related roll up for Individuals and Organizations.</description>
        <inlineHelpText>Matching gift record type Id to be included in Gift related roll up for Individuals and Organizations.</inlineHelpText>
        <label>Record Type Id for Giving Rollups</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegularGiftRecordTypeId__c</fullName>
        <description>RecordType Id for Gift on the Transaction object.</description>
        <inlineHelpText>RecordType Id for Gift on the Transaction object.</inlineHelpText>
        <label>Transaction Gift RecordType ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unknown_Guest_Id__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <description>Record Id of Unknown Guest contact record.  Used with event registrations.  This field is deprecated post Causeview v1.936.</description>
        <inlineHelpText>Record Id of Unknown Guest contact record.  Used with event registrations.  This field is deprecated post Causeview v1.936.</inlineHelpText>
        <label>(deprecated) Unknown Guest Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Batch Settings</label>
</CustomObject>